<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:scrollbars="vertical"
                android:paddingRight="20dp">

                <ImageView
                    android:id="@+id/imgvwLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <in.futuretrucks.customviews.CustomEditText
                        android:id="@+id/edtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_mobile"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:drawableLeft="@drawable/mobile"
                        android:drawablePadding="25dp"
                        app:edittextfont="@string/font_style" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <in.futuretrucks.customviews.CustomEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:drawableLeft="@drawable/password"
                        android:drawablePadding="25dp"
                        app:edittextfont="@string/font_style" />
                </android.support.design.widget.TextInputLayout>

                <in.futuretrucks.customviews.CustomTextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Forgot_Password"
                    android:padding="7dp"
                    android:textSize="@dimen/font_size_18"
                    app:edittextfont="@string/font_style"
                    android:layout_gravity="right"/>

                <in.futuretrucks.customviews.CustomButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button"
                    android:text="@string/LOGIN"
                    android:textSize="@dimen/font_size_18"
                    android:textColor="@color/color_header"
                    app:edittextfont="@string/font_style" />

                <in.futuretrucks.customviews.CustomTextView
                    android:id="@+id/txtOR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="@dimen/font_size_20"
                    app:edittextfont="@string/font_style"
                    android:layout_gravity="center_horizontal"/>

                <in.futuretrucks.customviews.CustomButton
                    android:id="@+id/btnJoinNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/join_now_btn_bg"
                    android:text="@string/JOIN_NETWORK"
                    android:textSize="@dimen/font_size_18"
                    android:textColor="#379EF0"
                    app:edittextfont="@string/font_style" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>