<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_gray_bg"
                android:orientation="vertical">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/toolbar_header"/>

    <in.futuretrucks.customviews.CustomTextView
        android:id="@+id/txtSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/Interested_City"
        android:textSize="@dimen/font_size_24"
        app:edittextfont="@string/font_style"/>

    <RelativeLayout
        android:id="@+id/layoutEnterCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSubject"
        android:background="@color/color_white"
        android:paddingBottom="40dp">

        <in.futuretrucks.customviews.CustomAutoCompleteTextView
            android:id="@+id/autotextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:drawableLeft="@drawable/city_building"
            android:hint="@string/City"
            android:inputType="text"
            android:imeOptions="actionDone"
            app:edittextfont="@string/font_style"
            android:textSize="@dimen/font_size_24"/>

        <in.futuretrucks.customviews.CustomEditText
            android:id="@+id/edtAddCityPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/autotextCity"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:inputType="numberSigned"
            android:imeOptions="actionDone"
            android:hint="@string/Pin"
            android:textColor="@color/color_black"
            android:drawableLeft="@drawable/pin"
            android:textSize="@dimen/font_size_24"
            app:edittextfont="@string/font_style"/>

    </RelativeLayout>


    <in.futuretrucks.customviews.CustomButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button"
        android:text="Next"
        android:layout_below="@+id/layoutEnterCity"
        android:textColor="@color/color_header"
        android:textSize="@dimen/font_size_18"
        app:edittextfont="@string/font_style"/>

</RelativeLayout>